--- a/RustContainer/src/Template/index.html
+++ b/RustContainer/src/Template/index.html
@@ -8,6 +8,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
     <style>
         canvas {
             -moz-user-select: none;
@@ -31,10 +32,10 @@
     <br>
     <script>
         $.ajax({
-            url: "35.208.41.153:8080",
-            context: document.body
-        }).done(function() {
-            $(this).addClass("done");
+            url: "http://35.208.41.153:8080",
+            type: "get"
+        }).done(function(res) {
+            console.log(res)
         });
         var MONTHS = ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December'];
         var config = {
