--- a/PythonContainer/templates/index.html
+++ b/PythonContainer/templates/index.html
@@ -26,61 +26,97 @@
     <div class='canvas-container' style='width:75%;'>
         <h1>Python container</h1>
         <canvas id="canvas"></canvas>
+        <canvas id="canvas1"></canvas>
     </div>
     <br>
     <br>
     <script>
-        let porcentajes = [4];
-        let horas = [4];
-        var MONTHS = horas;
-        var config = {
-            type: 'line',
-            data: {
-                labels: horas,
-                datasets: [{
-                    label: 'Porcentaje de uso',
-                    backgroundColor: "#000000",
-                    borderColor: "#000000",
-                    data: porcentajes,
-                    fill: false,
-                }]
-            },
-            options: {
-                responsive: true,
-                title: {
-                    display: true,
-                    text: 'Grafica de CPU'
-                },
-                tooltips: {
-                    mode: 'index',
-                    intersect: false,
-                },
-                hover: {
-                    mode: 'nearest',
-                    intersect: true
-                },
-                scales: {
-                    xAxes: [{
-                        display: true,
-                        scaleLabel: {
-                            display: true,
-                            labelString: 'Time'
-                        }
-                    }],
-                    yAxes: [{
-                        display: true,
-                        scaleLabel: {
-                            display: true,
-                            labelString: 'Cpu %'
-                        }
-                    }]
+        let porcentajes = [];
+        let horas = [];
+        let porcentajes1 = [20];
+        let horas1 = ["hola"];
+        let barChartData = {
+            labels: horas,
+            datasets: [{
+                label: 'RAM',
+                backgroundColor: "#FFD43B",
+                borderColor: "#306998",
+                borderWidth: 1,
+                data: porcentajes
+            }]
+        };
+
+        let barChartData1 = {
+            labels: horas1,
+            datasets: [{
+                label: 'CPU',
+                backgroundColor: "#306998",
+                borderColor: "#FFD43B",
+                borderWidth: 1,
+                data: porcentajes1
+            }]
+
+        };
+
+        setInterval(function() {
+            $.ajax({
+                url: "http://127.0.0.1:5000/data",
+                type: "get"
+            }).done(function(res) {
+                let ram = res.ram;
+                let cpu = res.cpu;
+                console.log(ram)
+                for (let i = 0; i < ram.length; i++) {
+                    if (i < 10) {
+                        porcentajes[i] = Number(ram[i].Valor);
+                        horas[i] = ram[i].Tiempo;
+                        continue;
+                    }
+                    break;
                 }
-            }
-        };
-        window.onload = function() {
-            var ctx = document.getElementById('canvas').getContext('2d');
-            window.myLine = new Chart(ctx, config);
-        };
+
+                for (let i = 0; i < cpu.length; i++) {
+                    if (i < 10) {
+                        porcentajes1[i] = Number(cpu[i].valor);
+                        horas1[i] = cpu[i].tiempo;
+                        continue;
+                    }
+                    break;
+                }
+            }).always(() => {
+                var ctx = document.getElementById('canvas').getContext('2d');
+                var ctx1 = document.getElementById('canvas1').getContext('2d');
+
+                window.myBar = new Chart(ctx, {
+                    type: 'bar',
+                    data: barChartData,
+                    options: {
+                        responsive: true,
+                        legend: {
+                            position: 'top',
+                        },
+                        title: {
+                            display: true,
+                            text: 'Porcentaje RAM'
+                        }
+                    }
+                });
+                window.myBar2 = new Chart(ctx1, {
+                    type: 'bar',
+                    data: barChartData1,
+                    options: {
+                        responsive: true,
+                        legend: {
+                            position: 'top',
+                        },
+                        title: {
+                            display: true,
+                            text: 'Porcentaje CPU'
+                        }
+                    }
+                });
+            });
+        }, 5000);
     </script>
 </body>
 
